2002-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix locking bug with NSZombie ... was not
	locking when adding/removing zombies.
	* Tools/ctvenc.m: new tool for converting string encodings.

2002-03-28  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/gsdoc.m: corrected inversed test for missing entities
	
2002-03-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrivate.h: Added function to fetch boolean value from env
	* Source/NSException.m: Use new function.
	* Source/NSProcesInfo.m: Implement new function.
	* Source/NSObject.m: Implement NSZombie functionality.
	* Headers/Foundation/NSDebug.h: Document NSZombie functionality.

2002-03-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: Implement code to watch for child process exit
	under mingw and rewrite various methods to handle process
	termination nicely under windoze.
	* Source/NSException.m: flush stderr ... under windoze stderr is
	not automatically flushed!
	* Source/GSWindowsFileHandle.m: watch for exceptional conditions
	so we can handle socket connection failures in mingw32.
	Added code to try to cope with standard files properly, not just
	network sockets.
	* Source/GSTcpPort.m: ditto.
	* Source/Unicode.m: GSToUnicode(), GSFromUnicode(), if terminate
	option is specified, always produce output with a nul terminator
	even for input of an empty string.

2002-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/GNUmakefile: Remove -lobjc and -lgnustep-base from bundle
	libraries ... it should not need them.

2002-03-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: Ensure property-list read/write uses UTF8
	* Source/NSDictionary.m: ditto
	* Source/NSConnection.m: Change timeouts to 300 seconds and
	document all methods.

2002-03-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: lossyCString_u() handle case where cString
	contains more bytes than unicode string has characters.